# OfflineAI

./: .gitignore  PRODUCT_DOCUMENT.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/src/main/java/com/offlineai/app/: MainActivity.kt  OfflineAIApp.kt
app/src/main/java/com/offlineai/app/data/: AppDatabase.kt  ChatRepository.kt
app/src/main/java/com/offlineai/app/engine/: InferenceService.kt  LlamaBridge.kt  ModelManager.kt
app/src/main/java/com/offlineai/app/rag/: DocumentProcessor.kt  Retriever.kt  VectorStore.kt
app/src/main/java/com/offlineai/app/ui/screens/: ChatScreen.kt  HomeScreen.kt  ManualScreen.kt  SplashScreen.kt
app/src/main/java/com/offlineai/app/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: splash_background.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
